@@ -1,3 +1,6 @@
+  126 Luca Falavigna	2009-04-18
+      Improve Contents module code
+
   125 Luca Falavigna	2009-03-11
       Add Contents module
 
